# ascendC

./: README.md  bash_commands.md  env_snapshot.txt  reporttemplate.md
12_matmulleakyrelu_frameworklaunch/: MatmulLeakyReluCustom.json  README.md  install.sh  开发日志.md  性能分析报告模板.md
12_matmulleakyrelu_frameworklaunch/AclNNInvocation/: README.md  run.sh
12_matmulleakyrelu_frameworklaunch/AclNNInvocation/inc/: operator_desc.h
12_matmulleakyrelu_frameworklaunch/AclNNInvocation/scripts/: gen_data.py
12_matmulleakyrelu_frameworklaunch/AclNNInvocation/src/: CMakeLists.txt  main.cpp  op_runner.cpp
12_matmulleakyrelu_frameworklaunch/MatmulLeakyReluCustom/op_host/: matmul_leakyrelu_custom.cpp  matmul_leakyrelu_custom_tiling.h
12_matmulleakyrelu_frameworklaunch/MatmulLeakyReluCustom/op_kernel/: matmul_leakyrelu_custom.cpp
13_matmulleakyrelu_kernellaunch/: NPU复现实验包.md  NPU复现实验包_v2_2026-02-17.md  README.md  context_compress_2_17.md  上下文压缩_2026-02-16.md  上下文压缩_2026-02-17.md  上下文压缩_2026-02-18.md  开发日志.md
13_matmulleakyrelu_kernellaunch/CppExtensions/: CMakeLists.txt  README.md  matmul_leakyrelu_custom.cpp  matmul_leakyrelu_custom_test.py  matmul_leakyrelu_custom_tiling.cpp  pybind11.cpp  run.sh
13_matmulleakyrelu_kernellaunch/MatmulLeakyReluInvocation/: README.md  main.cpp  matmul_leakyrelu_custom.cpp  matmul_leakyrelu_custom_tiling.cpp  run.sh
13_matmulleakyrelu_kernellaunch/MatmulLeakyReluInvocation/scripts/: gen_data.py
13_matmulleakyrelu_kernellaunch/MatmulLeakyReluInvocationAsync/: README.md  main.cpp  matmul_leakyrelu_custom.cpp  matmul_leakyrelu_custom_tiling.cpp  run.sh
13_matmulleakyrelu_kernellaunch/MatmulLeakyReluInvocationAsync/scripts/: gen_data.py
13_matmulleakyrelu_kernellaunch/Optimized/v1_shape_parallel/: benchmark_async_compare.py
baseline/10_matmul_frameworklaunch/: README.md  install.sh
baseline/10_matmul_frameworklaunch/AclNNInvocation/: README.md  run.sh
baseline/10_matmul_frameworklaunch/MatmulCustomSingleCore/: README.md
baseline/12_matmulleakyrelu_frameworklaunch/: install.sh
baseline/14_reduce_frameworklaunch/: README.md  install.sh
baseline/18_unaligned_wholereduces_frameworklaunch/: README.md  WholeReduceSumCustom.json  install.sh
baseline/7_broadcast_frameworklaunch/: README.md
optimi-v1/10_matmul_frameworklaunch/: MatmulCustom.json  install.sh  开发日志.md
optimi-v1/12_matmulleakyrelu_frameworklaunch/: README.md  install.sh  开发日志.md  性能分析报告模板.md
optimi-v1/14_reduce_frameworklaunch/: ReduceCustom.json  install.sh  开发日志.md
optimi-v1/18_unaligned_wholereduces_frameworklaunch/: install.sh  开发日志.md
optimi-v1/7_broadcast_frameworklaunch/: BroadcastCustom.json  install.sh  开发日志.md
(+186 files in other folders)
